fix:side-bar content spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,11 @@
 }
 
 .monthly-side-content {
-  /* width: 100%; */
+  width: 100%;
   height: 850px;
   display: flex;
   flex-direction: column;
-  /* max-width: 350px; */
+  max-width: 350px;
 }
 
 .monthly-side-content .side-data {
@@ -1906,11 +1906,13 @@ tr {
     left: 210px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .air-with-health {
     display: flex;
     flex-direction: column;
   }
+
   .main-body {
     padding: 0px;
   }
